--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -108,6 +108,9 @@ android {
 }
 
 dependencies {
+    // enable gifs on android
+    implementation 'com.facebook.fresco:fresco:2.0.0'
+     implementation 'com.facebook.fresco:animated-gif:3.6.0'
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
 
